[gd_scene load_steps=6 format=3 uid="uid://hqt3nv2gge3l"]

[ext_resource type="Script" path="res://scences/ui/player_card/card_pile/card_pile_view.gd" id="1_0x2r8"]
[ext_resource type="PackedScene" uid="uid://4lwv2ug5j5j6" path="res://scences/ui/player_card/card_menu_ui/card_menu_ui.tscn" id="1_w5x5h"]
[ext_resource type="StyleBox" uid="uid://r3x12h2yjbk0" path="res://assets/styleboxes/hover_stylebox.tres" id="3_tqb84"]
[ext_resource type="StyleBox" uid="uid://ck3105wj7dcrn" path="res://assets/styleboxes/default_stylebox.tres" id="4_07eqt"]

[sub_resource type="LabelSettings" id="LabelSettings_dc7mx"]
font_size = 24

[node name="CardPileView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0x2r8")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.705882)

[node name="Cards&Title" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Cards&Title"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleControl" type="Control" parent="Cards&Title/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Title" type="Label" parent="Cards&Title/VBoxContainer/TitleControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -130.0
offset_top = -3.0
offset_right = 130.0
offset_bottom = 9.0
grow_horizontal = 2
text = "Draw pile"
label_settings = SubResource("LabelSettings_dc7mx")
horizontal_alignment = 1
justification_flags = 131

[node name="ScrollContainer" type="ScrollContainer" parent="Cards&Title/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 2

[node name="Cards" type="GridContainer" parent="Cards&Title/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 10
columns = 6

[node name="CardMenuUI" parent="Cards&Title/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_w5x5h")]
layout_mode = 2

[node name="CardMenuUI2" parent="Cards&Title/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_w5x5h")]
layout_mode = 2

[node name="ReturnButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -87.0
offset_top = 6.0
offset_right = -7.0
offset_bottom = 34.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 12
theme_override_styles/hover = ExtResource("3_tqb84")
theme_override_styles/normal = ExtResource("4_07eqt")
text = "Return"
